--- a/pvicalculator.html
+++ b/pvicalculator.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -198,11 +199,11 @@ button:hover:not(:disabled) {
 <button id="calculateButton" onclick="calculate()">Calculate</button>
 
 <div class="base-param-info">
-    <span>p =</span>
+    <span>the base parameter = </span>
     <input type="number" id="baseParamInput" placeholder="0.8" step="0.01" min="0" max="1" oninput="validateBaseParam()">
     <span class="tooltip">?
         <span class="tooltip-content">
-            Default: 0.8.<br>The base parameter for a general exponential function of the lowest platelet count, where 0 &lt; p &lt; 1.
+            Default: 0.8.<br>The base parameter is a value used in a general exponential function of the lowest platelet count. It must satisfy: 0 &lt; value &lt; 1.
         </span>
     </span>
 </div>
