--- a/pvicalculator.html
+++ b/pvicalculator.html
@@ -194,7 +194,7 @@ button:hover:not(:disabled) {
 <body>
 <div class="container">
 <h1>PVI Calculator</h1>
-<p>Enter a sequence of platelet counts separated by any non-numeric characters.</p>
+<p>Enter platelet counts separated by non-numeric characters.</p>
 <input type="text" id="plateletInput" placeholder="e.g., 10.5, 16, 48.1, 72">
 <button id="calculateButton" onclick="calculate()">Calculate</button>
 
