--- a/index.html
+++ b/index.html
@@ -65,20 +65,21 @@
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://lobechat.lokyshin.net" target="_blank">
+                                                        <a href="https://ai.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-comment"></i> 
-                                                          &nbsp;&nbsp;LobeChat by Lokyshin
+                                                          &nbsp;&nbsp;LKS Open-WebAI
                                                         </a>
                                                 </li>
                                                 <li>
-                                                        <a href="https://chat.lokyshin.net" target="_blank">
+                                                        <a href="https://firefox.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-message"></i> 
-                                                          &nbsp;&nbsp;ChatGPT by Lokyshin
+                                                          &nbsp;&nbsp;Firefox(Global) on Browser
                                                         </a>
                                                 </li>
-                                                        <a href="https://alltube.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-circle-down"></i>
-                                                          &nbsp;&nbsp;AllTube Download
+                                                <li>
+                                                        <a href="https://firefoxhome.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-message"></i> 
+                                                          &nbsp;&nbsp;Firefox(CN) on Browser
                                                         </a>
                                                 </li>
                                                 <li>
