--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                                                         </a>
                                                 </li>
                                                 <li>
+                                                        <a href="https://deepsearch.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-shield"></i> 
+                                                          &nbsp;&nbsp;DeepSearch by Lokyshin
+                                                        </a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://ds.lokyshin.net" target="_blank">
+                                                          <i class="fa-solid fa-shield"></i> 
+                                                          &nbsp;&nbsp;Quick Deep Search by Lokyshin
+                                                        </a>
+                                                </li>
+                                                <li>
                                                         <a href="https://firefox.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-message"></i> 
                                                           &nbsp;&nbsp;Firefox(Global) on Browser
