--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://ai.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-comment"></i> 
+                                                          <i class="fa-solid fa-message"></i> 
                                                           &nbsp;&nbsp;LKS Open-WebAI
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://deepsearch.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-shield"></i> 
+                                                          <i class="fa-solid fa-search"></i> 
                                                           &nbsp;&nbsp;DeepSearch by Lokyshin
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://ds.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-shield"></i> 
+                                                          <i class="fa-solid fa-search"></i> 
                                                           &nbsp;&nbsp;Quick Deep Search by Lokyshin
                                                         </a>
                                                 </li>
