--- a/index.html
+++ b/index.html
@@ -72,14 +72,20 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://deepsearch.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-search"></i> 
+                                                          <i class="fa fa-search"></i> 
                                                           &nbsp;&nbsp;DeepSearch by Lokyshin
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://ds.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-search"></i> 
+                                                          <i class="fa fa-search"></i> 
                                                           &nbsp;&nbsp;Quick Deep Search by Lokyshin
+                                                        </a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://s.lokyshin.net" target="_blank">
+                                                          <i class="fa fa-search"></i> 
+                                                          &nbsp;&nbsp;Lokyshin Search
                                                         </a>
                                                 </li>
                                                 <li>
