--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://firefox.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-message"></i> 
+                                                          <i class="fa fa-firefox"></i> 
                                                           &nbsp;&nbsp;Firefox(Global) on Browser
                                                         </a>
                                                 </li>
                                                 <li>
                                                         <a href="https://firefoxhome.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-message"></i> 
+                                                          <i class="fa fa-firefox"></i> 
                                                           &nbsp;&nbsp;Firefox(CN) on Browser
                                                         </a>
                                                 </li>
