--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://s.lokyshin.net" target="_blank">
-                                                          <i class="fa fa-search"></i> 
+                                                          <i class="fa fa-wpexplorer"></i> 
                                                           &nbsp;&nbsp;Lokyshin Search
                                                         </a>
                                                 </li>
