--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://ai.lokyshin.net" target="_blank">
-                                                          <i class="fa-solid fa-message"></i> 
+                                                          <i class="fa-solid fa-brain"></i> 
                                                           &nbsp;&nbsp;LKS Open-WebAI
                                                         </a>
                                                 </li>
@@ -84,7 +84,7 @@
                                                 </li>
                                                 <li>
                                                         <a href="https://s.lokyshin.net" target="_blank">
-                                                          <i class="fa fa-searchengin"></i> 
+                                                          <i class="fab fa-wpexplorer"></i> 
                                                           &nbsp;&nbsp;Lokyshin Search
                                                         </a>
                                                 </li>
