--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                                                         </a>
                                                 </li>
                                                 <li>
+                                                        <a href="https://music.lokyshin.net" target="_blank">
+                                                          <i class="fa fa-music"></i> 
+                                                          &nbsp;&nbsp;Navidrome
+                                                        </a>
+                                                </li>
+                                                <li>
                                                         <a href="https://bitwarden.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-shield"></i> 
                                                           &nbsp;&nbsp;Bitwarden
