--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                                 <li>
                                                         <a href="https://tv.lokyshin.net" target="_blank">
                                                           <i class="fa fa-television"></i> 
-                                                          &nbsp;&nbsp;LibreTV
+                                                          &nbsp;LibreTV
                                                         </a>
                                                 </li>
                                                 <li>
