--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                                 <li>
                                                         <a href="https://pdf.lokyshin.net" target="_blank">
                                                           <i class="fa-solid fa-file-pdf"></i> 
-                                                          &nbsp;&nbsp;Lokyshin's PDF
+                                                          &nbsp;&nbsp;&nbsp;Lokyshin's PDF
                                                         </a>
                                                 </li>
                                                 <li>
