--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <header class="card-header">
                                     <p class="card-header-title">
                                       <i class="fa-solid fa-screwdriver-wrench"></i> 
-                                      &nbsp;&nbsp;常用工具
+                                      &nbsp;&nbsp;生产工具
                                     </p>
                                 </header>
                                 <div class="card-content">
@@ -123,7 +123,7 @@
                                 <header class="card-header">
                                     <p class="card-header-title">
                                       <i class="fa-solid fa-keyboard"></i> 
-                                      &nbsp;&nbsp;编程统计
+                                      &nbsp;&nbsp;常用工具
                                     </p>
                                 </header>
                                 <div class="card-content">
