--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                                             </a>
                                           </li>
                                           <li>
-                                            <a href="https://bitwarden.lokyshin.cn" target="_blank">
+                                            <a href="https://vaultwarden.lokyshin.cn" target="_blank">
                                               <i class="fa-solid fa-shield"></i>
-                                              &nbsp;&nbsp;Bitwarden
+                                              &nbsp;&nbsp;Vaultwarden
                                             </a>
                                           </li>     
                                         </ul>
