--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                                                   </a>
                                           </li>
                                           <li>
+                                            <a href="https://markitdown.lokyshin.net" target="_blank">
+                                              <i class="fa-brands fa-microsoft"></i> 
+                                              &nbsp;&nbsp;&nbsp;Lokyshin's PDF
+                                            </a>
+                                          </li> 
+                                          <li>
                                             <a href="https://pdf.lokyshin.net" target="_blank">
                                               <i class="fa-solid fa-file-pdf"></i> 
                                               &nbsp;&nbsp;&nbsp;Lokyshin's PDF
