--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                           <li>
                                             <a href="https://markitdown.lokyshin.net" target="_blank">
                                               <i class="fa-brands fa-microsoft"></i> 
-                                              &nbsp;&nbsp;&nbsp;Lokyshin's PDF
+                                              &nbsp;&nbsp;&nbsp;Lokyshin的其他文件转换成Markdown格式工具
                                             </a>
                                           </li> 
                                           <li>
